--- a/lab 2/Lab2.html
+++ b/lab 2/Lab2.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-US">
   <head>
     <title>About Yourself</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> -->
     <style type="text/css">
       body {
         font-family: arial, sans-serif;
